--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section class="main-section">
             <button id="generate">GENERATE THAT RANDOM NUMBER</button>
-            <p id="random-num">#</p>
+            <p id="random-num"></p>
         </section>
     </main>
     <footer>
